# simpler-pnglib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  globals.c  setup_windows.bat  spnglib_read.c  spnglib_read_txt.c  spnglib_utils.c  spnglib_write.c  spnglib_write_txt.c  testread.c
Examples/: conv.c  printinf.c  printpnginf  testread.c
include/: globals.h  spnglib.h  zlib-ng.h
